--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">
+            <a class="navbar-brand" href="{{ url_for('public.index') }}">
                 <i class="bi bi-shield-check"></i> ID Recovery System
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -42,24 +42,24 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                        <a class="nav-link" href="{{ url_for('public.index') }}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('report_lost') }}">Report Lost ID</a>
+                        <a class="nav-link" href="{{ url_for('public.report_lost') }}">Report Lost ID</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('report_found') }}">Report Found ID</a>
+                        <a class="nav-link" href="{{ url_for('public.report_found') }}">Report Found ID</a>
                     </li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_dashboard') }}">Dashboard</a>
+                        <a class="nav-link" href="{{ url_for('admin.admin_dashboard') }}">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login') }}">Admin Login</a>
+                        <a class="nav-link" href="{{ url_for('auth.login') }}">Admin Login</a>
                     </li>
                     {% endif %}
                 </ul>
